--- a/Style/style.css
+++ b/Style/style.css
@@ -147,6 +147,7 @@ img {
   border-radius: 20px;
   flex-wrap: wrap;
   margin-top: 50px;
+  border: 1px solid black;
 }
 .numberOfHours {
   position: absolute;
@@ -157,4 +158,10 @@ img {
   position: absolute;
   top: 30px;
   left: 45px;
+}
+.circleOfGithub {
+  border: 1px solid black;
+  border-top: 0px solid black;
+  width: 90%;
+  margin: 0px auto;
 }
