--- a/Style/style.css
+++ b/Style/style.css
@@ -1,6 +1,3 @@
-/* body {
-  background-image: url('/Photos/blob.svg') !important;
-} */
 .profile {
   position: relative;
   top: -120px;
@@ -10,9 +7,9 @@
   margin: 0% 20%;
   margin-top: 130px;
   height: 500px;
-  border: 1px solid black;
-  /* box-shadow: 5px 5px 5px 5px #9e9e9e; */
-  border-radius: 0px 30px 0px 30px;
+  border: 4px solid #a1887f;
+  box-shadow: 5px 5px 5px 5px #9e9e9e;
+  border-radius: 50px;
   /* background: #b0bec5; */
   box-shadow: inset 7px 7px 25px #a1887f, inset -7px -7px 25px #a1887f;
 }
@@ -58,30 +55,16 @@
   width: 600px;
 }
 .circleDiv {
-  border: 15px solid;
-  border-color: #795548 #795548 #795548 #795548;
+  border: 3px solid;
+  border-color: #a1887f;
   width: 150px;
   height: 150px;
-  border-radius: 50%;
-  position: relative;
+  border-radius: 6%;
+  box-shadow: 5px 5px 5px 5px #9e9e9e;
+
+  box-shadow: inset 3px 3px 15px #a1887f, inset -3px -3px 15px #a1887f;
 }
-.cardIcon {
-  display: flex;
-  justify-content: space-around;
-}
-.card {
-  border-radius: 30px;
-  background: linear-gradient(145deg, #ffffff, #dbdada);
-  box-shadow: 5px 5px 10px #616161, -5px -5px 10px #ffffff;
-}
-.card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
-}
-.card-img {
-  padding: 10px;
-  border-radius: 15px;
-}
+
 img {
   border-radius: 5px 5px 0 0;
 }
@@ -98,7 +81,7 @@ img {
   position: absolute;
 }
 .container {
-  padding: 2px 16px;
+  padding: 5px;
 }
 .horizontalLine {
   width: 35%;
@@ -144,24 +127,234 @@ img {
   flex-wrap: wrap;
   justify-content: space-around;
   width: 100%;
-  border-radius: 20px;
   flex-wrap: wrap;
-  margin-top: 50px;
-  border: 1px solid black;
+  margin-top: 6px;
 }
-.numberOfHours {
-  position: absolute;
-  top: 30px;
-  left: 5px;
-}
+
 .numberCommitHours {
   position: absolute;
   top: 30px;
   left: 45px;
 }
 .circleOfGithub {
-  border: 1px solid black;
-  border-top: 0px solid black;
-  width: 90%;
   margin: 0px auto;
+}
+/* .profiDiv {
+  border-radius: 16px;
+  background: #dde1e4;
+  box-shadow: 5px 5px 10px #585a5b, -5px -5px 10px #ffffff;
+  width: 20%;
+} */
+.wrapper {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+.card {
+  width: 480px;
+  height: 340px;
+  margin: 1em;
+  perspective: 1500px;
+}
+.card .content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
+}
+.more {
+  display: none;
+}
+.more:checked ~ .content {
+  transform: rotateY(180deg);
+}
+.front,
+.back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  border-radius: 6px;
+}
+.front .inner,
+.back .inner {
+  height: 100%;
+  display: grid;
+  padding: 1em;
+  transform: translateZ(80px) scale(0.94);
+}
+.front {
+  background-color: #fff;
+  background-size: cover;
+  background-position: center center;
+}
+.front:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 6px;
+  backface-visibility: hidden;
+  background: linear-gradient(
+    40deg,
+    rgba(67, 138, 243, 0.7),
+    rgba(255, 242, 166, 0.7)
+  );
+}
+.front .inner {
+  grid-template-rows: 5fr 1fr 1fr 2fr 1fr;
+  justify-items: center;
+}
+.front h3 {
+  grid-row: 2;
+  margin-bottom: 0.3em;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  color: #fff;
+  font-weight: 500;
+  text-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+}
+.front .rating {
+  grid-row: 3;
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 14px;
+  display: flex;
+  flex-flow: row nowrap;
+}
+.front .rating i {
+  margin: 0 1px;
+}
+.back {
+  transform: rotateY(180deg);
+  background-color: #fff;
+  border: 2px solid #f0f0f0;
+}
+/* .back .inner {
+  grid-template-rows: 1fr 2fr 1fr 2fr 14fr 1fr 1fr;
+  grid-template-columns: repeat(4, auto);
+  grid-column-gap: 0.2em;
+  justify-items: center;
+} */
+.back .info {
+  position: relative;
+  display: flex;
+  align-items: center;
+  color: #355cc9;
+  grid-row: 3;
+}
+.back .info:not(:first-of-type):before {
+  content: '';
+  position: absolute;
+  left: -0.9em;
+  height: 18px;
+  width: 1px;
+  background-color: #ccc;
+}
+.back .info span {
+  font-size: 2em;
+  font-weight: 700;
+}
+.back .info i {
+  font-size: 1.2em;
+}
+.back .info i:before {
+  background: linear-gradient(40deg, #355cc9, #438af3);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
+.back .info .icon {
+  margin-left: 0.3em;
+}
+.back .info .icon span {
+  display: block;
+  margin-top: -0.25em;
+  font-size: 0.8em;
+  font-weight: 600;
+  white-space: nowrap;
+}
+.back .description {
+  grid-row: 5;
+  grid-column: -1;
+  font-size: 0.86em;
+  border-radius: 5px;
+  font-weight: 600;
+  line-height: 1.4em;
+  overflow: auto;
+  color: #355cc9;
+}
+.back .location,
+.back .price {
+  font-weight: 600;
+  color: #355cc9;
+  grid-row: 1;
+  font-size: 0.86em;
+}
+.back .location {
+  grid-column: 0.3333333333;
+  justify-self: left;
+}
+.back .price {
+  grid-column: -3;
+  justify-self: right;
+}
+.back .button {
+  grid-column: -1;
+  justify-self: right;
+}
+.button {
+  grid-row: -1;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 600;
+  cursor: pointer;
+  display: block;
+  padding: 0 1.5em;
+  height: 3em;
+  line-height: 2.9em;
+  min-width: 3em;
+  background-color: transparent;
+  border: solid 2px #fff;
+  color: #fff;
+  border-radius: 4px;
+  text-align: center;
+  left: 50%;
+  backface-visibility: hidden;
+  transition: 0.3s ease-in-out;
+  text-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+}
+.button:hover {
+  background-color: #fff;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+  text-shadow: none;
+  color: #355cc9;
+}
+.button.return {
+  line-height: 3em;
+  color: #355cc9;
+  border-color: #355cc9;
+  text-shadow: none;
+}
+.button.return:hover {
+  background-color: #355cc9;
+  color: #fff;
+  box-shadow: none;
+}
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #859ddf;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #355cc9;
 }
