--- a/Style/style.css
+++ b/Style/style.css
@@ -13,7 +13,6 @@ body {
   border: 4px solid #a1887f;
   box-shadow: 5px 5px 5px 5px #9e9e9e;
   border-radius: 50px;
-  /* background: #b0bec5; */
   box-shadow: inset 7px 7px 25px #a1887f, inset -7px -7px 25px #a1887f;
 }
 @media only screen and (max-width: 600px) {
@@ -30,7 +29,10 @@ body {
 .profColor {
   color: #4e342e;
 }
-
+.variousIcons {
+  display: flex;
+  justify-content: center;
+}
 .bioDiv {
   display: flex;
   flex-direction: column;
@@ -164,7 +166,9 @@ img {
   position: relative;
   width: 100%;
   height: 100%;
+  /* whether children of an element are positioned in the 3D space */
   transform-style: preserve-3d;
+  /* Rotate function */
   transition: transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
 }
 .more {
